Excel4J17Loder/src/main/gen/BXEXCELParser.java
// Generated from java-escape by ANTLR 4.11.1


package union.xenfork.news;
/**
 * @author baka4n
 */

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BXEXCELParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, LINE_COMMENT=4, COMMENT=5, WS=6, END=7, FILENAME=8, 
		INT=9, SHEETNAME=10, DOUBLE=11, STRING=12;
	public static final int
		RULE_all = 0, RULE_c1 = 1, RULE_cc1 = 2, RULE_sheet = 3, RULE_xlsx_x = 4, 
		RULE_xlsx_a = 5, RULE_xlxs_xa = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"all", "c1", "cc1", "sheet", "xlsx_x", "xlsx_a", "xlxs_xa"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "','", "'}'", null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "LINE_COMMENT", "COMMENT", "WS", "END", "FILENAME", 
			"INT", "SHEETNAME", "DOUBLE", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BXEXCELParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AllContext extends ParserRuleContext {
		public List<C1Context> c1() {
			return getRuleContexts(C1Context.class);
		}
		public C1Context c1(int i) {
			return getRuleContext(C1Context.class,i);
		}
		public AllContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_all; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).enterAll(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).exitAll(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BXEXCELVisitor ) return ((BXEXCELVisitor<? extends T>)visitor).visitAll(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllContext all() throws RecognitionException {
		AllContext _localctx = new AllContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_all);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(15); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(14);
				c1();
				}
				}
				setState(17); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==FILENAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class C1Context extends ParserRuleContext {
		public List<Cc1Context> cc1() {
			return getRuleContexts(Cc1Context.class);
		}
		public Cc1Context cc1(int i) {
			return getRuleContext(Cc1Context.class,i);
		}
		public C1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).enterC1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).exitC1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BXEXCELVisitor ) return ((BXEXCELVisitor<? extends T>)visitor).visitC1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C1Context c1() throws RecognitionException {
		C1Context _localctx = new C1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_c1);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(20); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(19);
					cc1();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(22); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cc1Context extends ParserRuleContext {
		public Token fileName;
		public List<SheetContext> sheet() {
			return getRuleContexts(SheetContext.class);
		}
		public SheetContext sheet(int i) {
			return getRuleContext(SheetContext.class,i);
		}
		public TerminalNode END() { return getToken(BXEXCELParser.END, 0); }
		public TerminalNode FILENAME() { return getToken(BXEXCELParser.FILENAME, 0); }
		public Cc1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cc1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).enterCc1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).exitCc1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BXEXCELVisitor ) return ((BXEXCELVisitor<? extends T>)visitor).visitCc1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cc1Context cc1() throws RecognitionException {
		Cc1Context _localctx = new Cc1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_cc1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			((Cc1Context)_localctx).fileName = match(FILENAME);
			setState(25);
			match(T__0);
			setState(26);
			sheet();
			setState(34);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				{
				setState(29); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(27);
					match(T__1);
					setState(28);
					sheet();
					}
					}
					setState(31); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__1 );
				}
				break;
			case T__2:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(36);
			match(T__2);
			setState(37);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SheetContext extends ParserRuleContext {
		public Token sheetName;
		public TerminalNode SHEETNAME() { return getToken(BXEXCELParser.SHEETNAME, 0); }
		public List<Xlsx_xContext> xlsx_x() {
			return getRuleContexts(Xlsx_xContext.class);
		}
		public Xlsx_xContext xlsx_x(int i) {
			return getRuleContext(Xlsx_xContext.class,i);
		}
		public List<Xlxs_xaContext> xlxs_xa() {
			return getRuleContexts(Xlxs_xaContext.class);
		}
		public Xlxs_xaContext xlxs_xa(int i) {
			return getRuleContext(Xlxs_xaContext.class,i);
		}
		public SheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sheet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).enterSheet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).exitSheet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BXEXCELVisitor ) return ((BXEXCELVisitor<? extends T>)visitor).visitSheet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SheetContext sheet() throws RecognitionException {
		SheetContext _localctx = new SheetContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sheet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			((SheetContext)_localctx).sheetName = match(SHEETNAME);
			setState(40);
			match(T__0);
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case SHEETNAME:
				{
				{
				setState(43);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INT:
					{
					setState(41);
					xlsx_x();
					}
					break;
				case SHEETNAME:
					{
					setState(42);
					xlxs_xa();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(55);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__1:
					{
					setState(50); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(45);
						match(T__1);
						setState(48);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case INT:
							{
							setState(46);
							xlsx_x();
							}
							break;
						case SHEETNAME:
							{
							setState(47);
							xlxs_xa();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						}
						setState(52); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__1 );
					}
					break;
				case T__2:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				break;
			case T__2:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(60);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Xlsx_xContext extends ParserRuleContext {
		public Token x;
		public TerminalNode INT() { return getToken(BXEXCELParser.INT, 0); }
		public List<Xlsx_aContext> xlsx_a() {
			return getRuleContexts(Xlsx_aContext.class);
		}
		public Xlsx_aContext xlsx_a(int i) {
			return getRuleContext(Xlsx_aContext.class,i);
		}
		public Xlsx_xContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xlsx_x; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).enterXlsx_x(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).exitXlsx_x(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BXEXCELVisitor ) return ((BXEXCELVisitor<? extends T>)visitor).visitXlsx_x(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Xlsx_xContext xlsx_x() throws RecognitionException {
		Xlsx_xContext _localctx = new Xlsx_xContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_xlsx_x);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((Xlsx_xContext)_localctx).x = match(INT);
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(63);
				match(T__0);
				setState(64);
				xlsx_a();
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(65);
					match(T__1);
					setState(66);
					xlsx_a();
					}
					}
					setState(69); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__1 );
				setState(71);
				match(T__2);
				}
				break;
			case SHEETNAME:
				{
				setState(73);
				xlsx_a();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Xlsx_aContext extends ParserRuleContext {
		public Token y;
		public Token int_;
		public Token double_;
		public Token string;
		public TerminalNode SHEETNAME() { return getToken(BXEXCELParser.SHEETNAME, 0); }
		public TerminalNode INT() { return getToken(BXEXCELParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(BXEXCELParser.DOUBLE, 0); }
		public TerminalNode STRING() { return getToken(BXEXCELParser.STRING, 0); }
		public Xlsx_aContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xlsx_a; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).enterXlsx_a(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).exitXlsx_a(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BXEXCELVisitor ) return ((BXEXCELVisitor<? extends T>)visitor).visitXlsx_a(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Xlsx_aContext xlsx_a() throws RecognitionException {
		Xlsx_aContext _localctx = new Xlsx_aContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_xlsx_a);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((Xlsx_aContext)_localctx).y = match(SHEETNAME);
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				{
				setState(77);
				((Xlsx_aContext)_localctx).int_ = match(INT);
				}
				break;
			case DOUBLE:
				{
				setState(78);
				((Xlsx_aContext)_localctx).double_ = match(DOUBLE);
				}
				break;
			case STRING:
				{
				setState(79);
				((Xlsx_aContext)_localctx).string = match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Xlxs_xaContext extends ParserRuleContext {
		public Token xa;
		public Token int_;
		public Token double_;
		public Token string;
		public TerminalNode SHEETNAME() { return getToken(BXEXCELParser.SHEETNAME, 0); }
		public TerminalNode INT() { return getToken(BXEXCELParser.INT, 0); }
		public TerminalNode DOUBLE() { return getToken(BXEXCELParser.DOUBLE, 0); }
		public TerminalNode STRING() { return getToken(BXEXCELParser.STRING, 0); }
		public Xlxs_xaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xlxs_xa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).enterXlxs_xa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BXEXCELListener ) ((BXEXCELListener)listener).exitXlxs_xa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BXEXCELVisitor ) return ((BXEXCELVisitor<? extends T>)visitor).visitXlxs_xa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Xlxs_xaContext xlxs_xa() throws RecognitionException {
		Xlxs_xaContext _localctx = new Xlxs_xaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_xlxs_xa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			((Xlxs_xaContext)_localctx).xa = match(SHEETNAME);
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				{
				setState(83);
				((Xlxs_xaContext)_localctx).int_ = match(INT);
				}
				break;
			case DOUBLE:
				{
				setState(84);
				((Xlxs_xaContext)_localctx).double_ = match(DOUBLE);
				}
				break;
			case STRING:
				{
				setState(85);
				((Xlxs_xaContext)_localctx).string = match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}